# mlops-carton-prediction

./: Dockerfile  README.md  airflow-variables.csv  deploy-utils.sh  docker-compose.yml  knnights.jenkinsfile  mkdocs.yml  nike-root.crt  nike-tls-ca.crt  pyproject.toml  quality-config.yaml
dags/: shapeshifter_dag.py
docs/: development.md  gen_ref_nav.py
notebooks/: compare_baseline.ipynb  create_config.py  eda.ipynb  evaluate.py  experimentation_lightgbm_pipeline.ipynb  inference_pipeline.ipynb  inference_processing.py  manual_evaluation.ipynb
notebooks/model_scripts/: inference.py  requirements.txt
scripts/docker/: bash.sh  build.sh  python.sh
scripts/docs/: build.sh  deploy.sh  serve.sh
scripts/pre-commit/: install.sh  run.sh  update.sh
scripts/test/: run-coverage.sh
shapeshifter/: enums.py
shapeshifter.egg-info/: PKG-INFO  SOURCES.txt
shapeshifter/config/: env_config.conf  env_config.py  logging_config.py
shapeshifter/data/: modeling_schema.json  schemas.py
shapeshifter/data/queries/: sf_actuals_vs_predictions.sql  sf_inference_archive_data.py  sf_inference_data_query.py  sf_inference_latest_date.py  (+1 more)
shapeshifter/generic/: config.py  data_pipeline.py  input_data_pipeline.py  output_data_pipeline.py  sagemaker_pipeline.py
shapeshifter/main/: model.py  pipeline_factory.py  run_pipeline.py
shapeshifter/monitoring/: data_drift.py
shapeshifter/steps/: executors.py  generic_steps.py  inference_steps.py  training_steps.py
shapeshifter/utils/: generic_functions.py  snowflake_warehouse_scaling.py  spark_helper.py
tests/unit/: test_logger.py
(+14 files in other folders)
