[tool.poetry]
name = "Shapeshifter"
version = "0.1.0"
description = "Converting units into cartons and more!"
authors = ["kNNights <elc.advancedanalytics@nike.com>"]

packages = [
    { include = "shapeshifter" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
rich = "*"
nbdime = "*"
pyhocon = "^0"
magic-dust-api-utils = "^1"
types-requests = "2.28.10"
magic-dust-snowflake = "^2"
pandera = "*"
s3fs = "*"
sagemaker = "^2.117.0"
boto3 = "^1.24.59"
tabulate = "^0.8"
magic-dust-cerberus = "^1"
magic-dust-aws = "^2"
freezegun = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocs-autorefs = "*"
mkdocstrings-python = "*"
mkdocs-gen-files = "*"
mkdocs-literate-nav = "*"
mkdocs-section-index = "*"
mkdocs-include-markdown-plugin = "*"
pyspark-test = "^0"
black = {extras = ["jupyter"], version = "^22.12.0"}
moto = "^3"
mypy = "^0.991"
pre-commit = "^2.20.0"
pipenv = "^2022.9.4"
coverage = "^6.4.4"
isort = "^5.10"
pyspark = "3.2.2"
types-tabulate = "^0.9.0"
types-pytz = "^2022.7.1"
mock = "^5.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "nike"
url = "https://artifactory.nike.com/artifactory/api/pypi/python-virtual/simple"
secondary = true

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

